# ZSerResMonitor

./: .gitignore  BUILD_GUIDE.md  index.html  package-lock.json  package.json
icon-previews/: design-philosophy.md
scripts/: sync-version.mjs
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config_store.rs  lib.rs  main.rs  metrics.rs  models.rs  ssh.rs
src/components/: CompactServerCard.tsx  GpuTable.tsx  ServerCard.tsx  ServerForm.tsx
